# Bazel build for the BigQuery polyfill UDF library.
#
# This package owns the DuckDB UDFs / macros that close the BigQuery
# / DuckDB semantic gap for the function rows in
# `backend/engine/duckdb/transpiler/functions.yaml` whose
# disposition is `duckdb_udf`. The library's single public entry
# point is `udf::RegisterAll(conn)`; `DuckDbExecutor` calls it
# against every fresh DuckDB connection it opens, so the macros are
# in place before the transpiled SQL executes.
#
# Per-family files live under `<family>/<name>.cc` and export a
# single `Register<Family>(conn)` function (see `registrar.cc`'s
# extern declarations). Each family lands in its own commit
# alongside its `functions.yaml` row flips and per-function
# conformance fixtures (per the plan's "no silent approximation"
# rule).

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

# Internal helper shared by every per-family registrar. Hidden under
# the `internal/` prefix so external callers stay on the public
# `:registrar` target.
cc_library(
    name = "run_macro_internal",
    srcs = ["internal/run_macro.cc"],
    hdrs = ["internal/run_macro.h"],
    visibility = [":__subpackages__"],
    deps = [
        "//third_party/duckdb",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

# The polyfill UDF registrar. Public entry point is
# `udf::RegisterAll(conn)`. Adding a new family means: drop a
# `<family>/<name>.cc` source, declare `Register<Family>(conn)` in
# `registrar.cc`, and add the file to the `srcs` list here.
cc_library(
    name = "registrar",
    srcs = [
        "conditional/conditional_macros.cc",
        "datetime/datetime_macros.cc",
        "numeric/numeric_macros.cc",
        "regex/regex_macros.cc",
        "registrar.cc",
        "string/string_macros.cc",
    ],
    hdrs = ["registrar.h"],
    deps = [
        ":run_macro_internal",
        "//third_party/duckdb",
        "@com_google_absl//absl/status",
    ],
)

# Smoke-tests the public registrar contract: null connection rejects,
# fresh connection registers cleanly, repeated registration is
# idempotent. Per-UDF tests live next to each family's source under
# `<family>/<name>_test.cc` and exercise the UDF body directly; this
# test only owns the shared invariant.
cc_test(
    name = "registrar_test",
    srcs = ["registrar_test.cc"],
    deps = [
        ":registrar",
        "//third_party/duckdb",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

# Numeric family per-UDF tests. Each test drives the macro directly
# against an in-process DuckDB connection (mirroring the per-query
# executor lifecycle) and exercises both the common path and the
# BigQuery-specific edge case the wrapper exists to pin.
cc_test(
    name = "numeric_macros_test",
    srcs = ["numeric/numeric_macros_test.cc"],
    deps = [
        ":registrar",
        "//third_party/duckdb",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

# Conditional family per-UDF tests. Covers `bq_if` (NULL-cond
# fall-through to the ELSE branch) and `bq_isnull` (empty-string
# is NOT null in BQ).
cc_test(
    name = "conditional_macros_test",
    srcs = ["conditional/conditional_macros_test.cc"],
    deps = [
        ":registrar",
        "//third_party/duckdb",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

# String family per-UDF tests. Covers `bq_strpos` (1-based index +
# zero-on-miss + NULL propagation). Functions whose BigQuery /
# DuckDB gap is wider than a thin macro (CONTAINS_SUBSTR's NFKC
# normalization, INSTR's full variadic surface, SOUNDEX's missing
# DuckDB analog, FORMAT's printf-spec divergence) stay at
# `status=planned` and re-point to `googlesqlite-09-date-time.plan.md`.
cc_test(
    name = "string_macros_test",
    srcs = ["string/string_macros_test.cc"],
    deps = [
        ":registrar",
        "//third_party/duckdb",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

# Regex family per-UDF tests. Covers `bq_regexp_contains` (RE2
# dialect compatibility + anchoring + inline-flag handling) and
# `bq_regexp_replace` (global-replacement contract + backref
# handling). `regexp_extract` / `regexp_extract_all` stay at
# `status=planned` and re-point to
# `googlesqlite-09-date-time.plan.md` because the BQ
# capture-group semantic (return group 1 when present, fall back
# to whole match otherwise) requires pattern introspection that
# is not expressible as a thin macro.
cc_test(
    name = "regex_macros_test",
    srcs = ["regex/regex_macros_test.cc"],
    deps = [
        ":registrar",
        "//third_party/duckdb",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)

# Datetime family per-UDF tests. Covers `bq_unix_seconds`,
# `bq_unix_millis`, `bq_unix_micros`, `bq_unix_date` (epoch
# wrappers around DuckDB's `epoch`, `epoch_ms`, `epoch_us`, and
# `date_diff` with appropriate truncation / day-boundary
# semantics for the BigQuery contract). The richer date /
# time / datetime / timestamp arithmetic family (DATE_ADD /
# DATE_SUB / DATE_DIFF / DATE_TRUNC + DATETIME_* + TIMESTAMP_*)
# stays at `status=planned` and re-points to
# `googlesqlite-09-date-time.plan.md` because the BigQuery
# month-end snap, ISO-year discrimination, and timezone-aware
# truncation semantics are too rich for a thin polyfill macro.
cc_test(
    name = "datetime_macros_test",
    srcs = ["datetime/datetime_macros_test.cc"],
    deps = [
        ":registrar",
        "//third_party/duckdb",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
    ],
)
