# Bazel build for the semantic-executor function families.
#
# This package owns the BigQuery-exact implementations for every
# function whose `functions.yaml` row picks the `semantic_executor`
# disposition with `plan=docs/ENGINE_POLICY.md`.
# `EvalFunctionCall` (in `backend/engine/semantic/eval_expr.cc`)
# forwards to `:dispatch::Dispatch` after the in-line operator /
# SAFE_* handling, so a new function only needs (a) a per-family
# .h/.cc implementation, (b) a dispatch entry, and (c) a
# `functions.yaml` row flip from `status=planned` to ready in the
# same commit.
#
# See `docs/ENGINE_POLICY.md` for the
# full scope and the per-family ordering.

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")

package(default_visibility = ["//visibility:public"])

cc_library(
    name = "numeric_edges",
    srcs = ["numeric_edges.cc"],
    hdrs = ["numeric_edges.h"],
    deps = [
        "//backend/engine/semantic:error",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:type_cc_proto",
        "@googlesql//googlesql/public:value",
    ],
)

cc_test(
    name = "numeric_edges_test",
    srcs = ["numeric_edges_test.cc"],
    deps = [
        ":numeric_edges",
        "//backend/engine/semantic:error",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "json_funcs",
    srcs = ["json_funcs.cc"],
    hdrs = ["json_funcs.h"],
    deps = [
        ":string_funcs",
        "//backend/engine/semantic:error",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:type_cc_proto",
        "@googlesql//googlesql/public:value",
    ],
)

cc_test(
    name = "json_funcs_test",
    srcs = ["json_funcs_test.cc"],
    deps = [
        ":json_funcs",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "operator_funcs",
    srcs = [
        "operator_funcs.cc",
        "operator_in.cc",
        "operator_math_funcs.cc",
    ],
    hdrs = ["operator_funcs.h"],
    deps = [
        ":datetime_funcs",
        "//backend/engine/semantic:error",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:interval_value",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:type_cc_proto",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "datetime_funcs",
    srcs = [
        "datetime_add_sub.cc",
        "datetime_current_unix.cc",
        "datetime_funcs.cc",
        "datetime_helpers.cc",
        "datetime_parse_format.cc",
    ],
    hdrs = [
        "datetime_funcs.h",
        "datetime_funcs_internal.h",
    ],
    deps = [
        "//backend/engine/semantic:error",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@googlesql//googlesql/public:interval_value",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:type_cc_proto",
        "@googlesql//googlesql/public:civil_time",
        "@googlesql//googlesql/public:evaluator",
        "@googlesql//googlesql/public:value",
    ],
)

cc_test(
    name = "datetime_funcs_test",
    srcs = ["datetime_funcs_test.cc"],
    deps = [
        ":datetime_funcs",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "string_funcs",
    srcs = [
        "string_extra_core.cc",
        "string_extra_encoding.cc",
        "string_extra_substr.cc",
        "string_extra_helpers.cc",
        "string_extra_regex_format.cc",
        "string_extra_unicode.cc",
        "string_funcs.cc",
    ],
    hdrs = [
        "string_funcs.h",
        "string_extra_internal.h",
    ],
    deps = [
        "//backend/engine/semantic:error",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/time",
        "@googlesql//googlesql/public:evaluator",
        "@googlesql//googlesql/public:numeric_value",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:type_cc_proto",
        "@googlesql//googlesql/public:value",
    ],
)

cc_test(
    name = "string_funcs_test",
    srcs = ["string_funcs_test.cc"],
    deps = [
        ":string_funcs",
        "//backend/engine/semantic:error",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "array_funcs",
    srcs = ["array_funcs.cc"],
    hdrs = ["array_funcs.h"],
    deps = [
        "//backend/engine/semantic:error",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:evaluator",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
    ],
)

cc_test(
    name = "array_funcs_test",
    srcs = ["array_funcs_test.cc"],
    deps = [
        ":array_funcs",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "hll_funcs",
    srcs = ["hll_funcs.cc"],
    hdrs = ["hll_funcs.h"],
    deps = [
        "//backend/engine/semantic:error",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:evaluator",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
    ],
)

cc_test(
    name = "hll_funcs_test",
    srcs = ["hll_funcs_test.cc"],
    deps = [
        ":hll_funcs",
        "//backend/engine/semantic:error",
        "//backend/engine/semantic:value",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "specialized_funcs",
    srcs = [
        "aggregate_specialized.cc",
        "aggregate_sum_avg.cc",
        "net_funcs.cc",
    ],
    hdrs = ["specialized_funcs.h"],
    deps = [
        ":hll_funcs",
        "//backend/engine/semantic:error",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:evaluator",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/resolved_ast",
        "@googlesql//googlesql/resolved_ast:resolved_node_kind_cc_proto",
    ],
)

cc_library(
    name = "geog_funcs",
    srcs = ["geog_funcs.cc"],
    hdrs = ["geog_funcs.h"],
    deps = [
        ":string_funcs",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
    ],
)

cc_library(
    name = "dispatch",
    srcs = ["dispatch.cc"],
    hdrs = ["dispatch.h"],
    deps = [
        ":array_funcs",
        ":datetime_funcs",
        ":geog_funcs",
        ":json_funcs",
        ":numeric_edges",
        ":operator_funcs",
        ":specialized_funcs",
        ":string_funcs",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@googlesql//googlesql/public:type",
    ],
)

cc_test(
    name = "dispatch_test",
    srcs = ["dispatch_test.cc"],
    deps = [
        ":dispatch",
        "//backend/engine/semantic:error",
        "//backend/engine/semantic:eval_expr",
        "//backend/engine/semantic:scan_eval",
        "//backend/engine/semantic:value",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_main",
        "@googlesql//googlesql/public:analyzer",
        "@googlesql//googlesql/public:analyzer_options",
        "@googlesql//googlesql/public:analyzer_output",
        "@googlesql//googlesql/public:builtin_function_options",
        "@googlesql//googlesql/public:catalog",
        "@googlesql//googlesql/public:language_options",
        "@googlesql//googlesql/public:options_cc_proto",
        "@googlesql//googlesql/public:simple_catalog",
        "@googlesql//googlesql/public:type",
        "@googlesql//googlesql/public:value",
        "@googlesql//googlesql/resolved_ast",
    ],
)
